# llama-cpp-langchain-chat

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
src/llama_cpp_langchain_chat/: .env.example  chat.py
src/llama_cpp_langchain_chat/.chainlit/: config.toml
